package.json changed

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "engines": {
     "node": "0.10.x"
   },
+  "dependencies": {
+    "bower": "1.3.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
