--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "0.10.x"
   },
   "dependencies": {
-    "bower": "1.3.x"
+    "bower": "1.3.x",
+    "statik": "~1.2.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
